vendor/structopt-0.3.21/tests/ui/positional_bool.rs
use structopt::StructOpt;

#[derive(StructOpt, Debug)]
struct Opt {
    verbose: bool,
}

fn main() {
    Opt::from_args();
}